fixed view log button visibility toggle in advanced selection and increased z-index of mylegendexperience to not conflict with log and newly added subcategory correctly updates the visual and when you complete add/delete form, the blurred overlay goes away

--- a/src/mylegendexperience.css
+++ b/src/mylegendexperience.css
@@ -10,7 +10,7 @@
 }
 
 #close-legend {
-    z-index: 10;
+    z-index: 15;
 }
 
 #overlay-legend {
@@ -23,7 +23,7 @@
     background-color: #FFFFFF;
     border: 2px solid #000000;
 
-    z-index: 9;
+    z-index: 14;
 }
 
 #categories-label {
@@ -32,7 +32,7 @@
     justify-content: center;
     margin-top: 6%;
 
-    z-index: 25;
+    z-index: 30;
 }
 
 #tags-label {
@@ -41,7 +41,7 @@
     justify-content: center;
     margin-top: 90%;
 
-    z-index: 25;
+    z-index: 30;
 }
 
 #line1 {
@@ -74,7 +74,7 @@
     backdrop-filter: blur(8px);
     -webkit-backdrop-filter: blur(8px); /* For Safari and some versions of Chrome */
     
-    z-index: 21;
+    z-index: 26;
     display: none;
 }
 
@@ -115,7 +115,7 @@
     padding: 0.3em;
     background-color: #D9D9D9;
     border: 2px solid black;
-    z-index: 22;
+    z-index: 27;
 
     width: 76%;
 }
@@ -208,7 +208,7 @@
 
     padding: 0.3em;
 
-    z-index: 19; 
+    z-index: 24; 
 
     cursor: pointer;
     text-align: center;
@@ -235,7 +235,7 @@
     padding: 0.3em;
     margin: 1em;
 
-    z-index: 19; /*9*/
+    z-index: 24; /*9*/
 
     cursor: pointer;
     text-align: center;
@@ -331,7 +331,7 @@
     overflow: auto;
     white-space: nowrap;
 
-    z-index: 11;
+    z-index: 16;
 }
 
 .dark-mode #folder-container {
@@ -373,7 +373,7 @@
 
     overflow: auto;
 
-    z-index: 20;
+    z-index: 25;
 }
 
 .dark-mode #tree-backdrop {
@@ -401,7 +401,7 @@
 
     overflow: auto;
 
-    z-index: 10;
+    z-index: 15;
 }
 
 #tag-container {
